@@ -22,6 +22,7 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class FeedbackServiceImpl implements FeedbackService {
@@ -111,7 +112,7 @@ public class FeedbackServiceImpl implements FeedbackService {
         Announcement announcement = getFindByAnnouncementId(announcementId);
         PageRequest pr = PageRequest.of(page - 1,size);
         List<Feedback> feedbacks = announcement.getFeedbacks();
-        return feedbacks.stream().map(this::getFeedbackResponse).toList();
+        return feedbacks.stream().map(this::getFeedbackResponse).collect(Collectors.toList());
     }
 
     @Override
